# yggdrasil

./: next.config.mjs  package-lock.json  package.json
.data/: db.json
agent/: install.sh  lpp-agent.service  pyproject.toml
agent/lpp_agent/: config.py  exec.py  http.py  main.py  runner.py  util.py
agent/lpp_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent/lpp_agent/plugins/: file_edit.py  pkg.py  sysctl.py  systemd.py
app/: globals.css  layout.tsx  page.tsx
app/(auth)/login/: page.tsx
app/api/: _store.ts
app/api/agent/install/: route.ts
app/api/agents/[id]/effective-policy/: route.ts
app/api/agents/[id]/heartbeat/: route.ts
app/api/agents/enroll/: route.ts
app/api/auth/login/: route.ts
app/api/auth/logout/: route.ts
app/api/customers/: route.ts
app/api/customers/[id]/: route.ts
app/api/customers/[id]/policies/: route.ts
app/api/debug/map-agent/: route.ts
app/api/devices/: route.ts
app/api/enroll/: route.ts
app/api/enroll/token/: route.ts
app/api/policies/: route.ts
app/api/policies/[id]/: route.ts
app/api/results/ingest/: route.ts
app/api/stats/: route.ts
app/customers/: page.tsx
app/devices/: page.tsx
app/policies/: page.tsx
app/settings/: page.tsx
components/: AssignPoliciesModal.tsx  InstallAgentModal.tsx  Modal.tsx  Nav.tsx  Sidebar.tsx
lib/: ldap.ts  types.ts
