[project]
name = "lpp-agent"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0
  tomli; python_version < "3.11"
  # add your deps here
]

[project.scripts]
lpp-agent = "lpp_agent.main:cli"   # 👈 stable console entrypoint

[tool.setuptools.packages.find]
where = ["."]
include = ["lpp_agent*"]
